Fixed vertical gallery alignment when thumbnails are empty

--- a/view/frontend/web/css/source/components/_gallery.less
+++ b/view/frontend/web/css/source/components/_gallery.less
@@ -238,6 +238,7 @@
         .breeze-gallery.vertical {
             flex-direction: row;
             align-items: flex-start;
+            justify-content: flex-end;
             .thumbnails {
                 flex-direction: column;
                 flex-wrap: nowrap;
